--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "npm": "^6.9.0",
     "request": "^2.88.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.16.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
